# foods-review-classification

./: .gitignore  README.md  README2.md  config.py  evaluate.py  first_try.csv  food-review.ipynb  load_20kHF.py  pyproject.toml  requirements.txt  run_pipeline.ipynb  score.py  train_baseline.py  train_xlmr.py  utils.py  visualize_eval.py
.cursor/plans/: restaurant-reputation-intel_2ea04062.plan.md
scripts/: _bootstrap.py  _runtime_check.py  _scratch_init.py  download_wongnai.py  eda_baseline_data.py  evaluate.py  generate_mock_data.py  preprocess.py  score_and_flag.py  summarize_tune_ceiling.py  train_baseline_xgb.py  train_xlmr_sentiment.py  try_log_utils.py  tune_baseline.py
src/rris/: __init__.py  config.py  logging_utils.py  progress.py  runtime_env.py
src/rris/data/: __init__.py  aspects.py  datasets.py  io.py  text.py  tokenizers.py
src/rris/integrity/: __init__.py  anomaly.py
src/rris/models/: __init__.py
src/rris/models/baseline/: __init__.py  tfidf_xgb.py  xgb_device.py
src/rris/models/xlmr/: __init__.py  aspect_extractor.py  sentiment_trainer.py
src/rris/viz/: __init__.py  colors.py  geo_export.py
